[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "propan"
description = "Propan framework: the simplest way to work with a messaging queues"
readme = "README.md"
authors = [
    { name = "Pastukhov Nikita", email = "diementros@yandex.ru" },
]

keywords = ["rabbitmq", "nats", "kafka", "sqs", "redis", "framework", "message brokers"]

requires-python = ">=3.8"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 1",
    "Framework :: Pydantic :: 2",
]

dynamic = ["version"]

dependencies = [
    "fast-depends>=2.1.1,<2.2.0",
    "watchfiles",
    "typer",
    "uvloop>=0.14.0,!=0.15.0,!=0.15.1; sys_platform != 'win32' and (sys_platform != 'cygwin' and platform_python_implementation != 'PyPy')",
]

[project.optional-dependencies]
async-rabbit = [
    "aio-pika>=9",
]

async-nats = [
    "nats-py>=2,!=2.3.0",
]

async-redis = [
    "redis>=4.2.0rc1",
]

async-kafka = [
    "aiokafka>=0.9,<0.10",
]

async-sqs = [
    "aiobotocore",
]

doc = [
    "PyYAML",
    "email-validator>=2.0.0",
    "polyfactory>=2.5.0",
    "jsonref",
    "fastapi",
    "uvicorn",
]

[project.urls]
Homepage = "https://lancetnik.github.io/Propan/"
Documentation = "https://lancetnik.github.io/Propan/"
Tracker = "https://github.com/Lancetnik/Propan/issues"
Source = "https://github.com/Lancetnik/Propan"

[project.scripts]
propan = "propan.__main__:cli"

[tool.hatch.metadata]
allow-direct-references = true
allow-ambiguous-features = true

[tool.hatch.version]
path = "propan/__about__.py"

[tool.hatch.build]
skip-excluded-dirs = true
exclude = [
    "/tests",
    "/docs",
]

[tool.hatch.envs.default]
python = "3.11" 
skip-install = false
features = [
  "dev",
]

[tool.hatch.envs.test]
features = [
  "test",
  "async-sqs",
  "async-kafka",
  "async-nats",
  "async-rabbit",
  "async-redis",
]

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.hatch.envs.test.scripts]
run = "pytest -q -m 'not slow and not run'"
run-all = "pytest -m 'all and not run'"

[tool.hatch.envs.test-last]
python = "3.11"
features = [
  "test",
  "async-sqs",
  "async-kafka",
  "async-nats",
  "async-rabbit",
  "async-redis",
]

[tool.hatch.envs.test-last.scripts]
run = "pytest -q -m 'not slow and not run'"
run-all = "pytest -v -m 'all and not run'"
cov = "bash ./scripts/test-cov.sh -v -m 'all'"

[tool.mypy]
strict = true
follow_imports = "skip"
ignore_missing_imports = true
disallow_subclassing_any = true
python_version = "3.8"

[tool.isort]
profile = "black"
known_first_party = ["propan"]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'

[tool.ruff]
fix = true
line-length = 88
target-version = "py37"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "Q",  # flake8-quotes
]
ignore = [
    "E501",  # line too long, handled by black
    "C901",  # too complex
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.flake8-bugbear]
extend-immutable-calls = [
    "propan.Depends", "propan.Context",
    "propan.utils.Depends", "propan.utils.Context",
    "propan.utils.context.Depends", "propan.utils.context.Context",
    "typer.Argument", "typer.Option",
    "pydantic.Field", "rocketry.args.Arg",
    "fastapi.Depends", "fastapi.datastructures.Default",
    "kafka.partitioner.default.DefaultPartitioner",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q -m 'not slow and not run'"
testpaths = [
    "tests",
]
markers = [
    "rabbit",
    "nats",
    "redis",
    "kafka",
    "sqs",
    "slow",
    "all",
    "run",
]

[tool.coverage.run]
parallel = true
branch = true
concurrency = [
    "multiprocessing",
    "thread"
]
source = [
    "propan",
    "tests"
]
context = '${CONTEXT}'
omit = [
    "**/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    ".*# pragma: no cover",
    "if __name__ == .__main__.:",
    "self.logger",
    "def __repr__",
    "lambda: None",
    "from .*",
    "import .*",
    '@(abc\.)?abstractmethod',
    "raise NotImplementedError",
    'raise AssertionError',
    'raise ValueError',
    'logger\..*',
    "pass",
    '\.\.\.',
]
omit = [
    '*/__about__.py',
    '*/__main__.py',
    '*/__init__.py',
    '*/annotations.py',
]
